# phoenix-chan

./: .dprint.json  .pre-commit-config.yaml  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  committed.toml  release-plz.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yaml  dependabot.yml
.github/actions/install-deps/: action.yaml
.github/workflows/: check.yaml  check.yml  ci.yaml  ci.yml  common.yaml  coverage.yaml  library.yaml  nostd.yaml  nostd.yml  os-check.yaml  publish.yaml  release-plz.yaml  safety.yaml  safety.yml  scheduled.yml  test.yaml  test.yml
scripts/ci/: check-for-publish.sh  coverage.sh
src/: builder.rs  client.rs  error.rs  lib.rs  message.rs
