[package]
name = "phoneix-chan"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
async-tungstenite = { version = "0.29.0", features = ["tokio-rustls-manual-roots"] }
base64 = "0.22.0"
rustls = "0.23.0"
serde = { version = "1.0.0", features = ["alloc", "derive"] }
serde_json = { version = "1.0.0", features = ["alloc"] }
thiserror = "2.0.0"
tokio = { version = "~1.43", features = [] }
tokio-rustls = "0.26.0"
tracing = "0.1.0"
tungstenite = "0.26.0"
rustc-hash = "2.0.0"
futures= "0.3.0"

[dev-dependencies]
tokio = { version = "~1.43", features = ["macros"] }
