[package]
name = "phoenix-chan"
version = "0.4.6"
edition = "2024"
rust-version = "1.85"
description = "Async Phoenix channle Client library implementation"
repository = "https://github.com/joshuachp/phoenix-chan"
license = "MIT OR Apache-2.0"
keywords = ["async", "channel", "elixir", "phoenix", "websocket"]
categories = ["asynchronous", "web-programming::websocket"]

[dependencies]
async-tungstenite = { version = "0.34.1", features = [
  "tokio-rustls-manual-roots"
] }
base64 = "0.22.0"
futures = "0.3.0"
rustc-hash = "2.0.0"
rustls = "0.23.0"
serde = { version = "1.0.118", features = ["alloc", "derive"] }
serde_json = { version = "1.0.60", features = ["alloc"] }
thiserror = "2.0.7"
tokio = { version = "1.47.0", features = ["sync", "time"] }
tokio-rustls = "0.26.0"
tracing = "0.1.20"
tungstenite = { version = "0.29.0" }

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.47.0", features = ["macros"] }
